Fix overflow problem on rewilding page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -697,7 +697,7 @@ padding-right: 50px;
 /* education of girls */
 
 #hero-image-education {
-  height: 400px;
+  height: 300px;
   width: 100%;
   overflow: hidden;
   background: url(../images/hero-images/education-of-girls.jpg) no-repeat center center;
@@ -735,8 +735,6 @@ padding-right: 50px;
 #awareness-container {
   background-color:white;
   width: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
   overflow: hidden; 
   }
   
@@ -750,7 +748,7 @@ padding-right: 50px;
   #solution {
   padding-top: 30px;
   padding-right: 150px;
-  width: 50%;
+  width: 45%;
   float: right;
   }
 
